# yargizeka

./: .env.n8n  claude.md  docker-compose.yml  n8n-setup-guide.md  start-n8n.sh
n8n-workflows/: yargitay-scraper-workflow.json  yargizeka-case-analysis-workflow.json  yargizeka-chat-workflow.json  yargizeka-legal-search-workflow.json  yargizeka-petition-workflow.json
yargizeka-app/: .env.example  .gitignore  KURULUM.md  README.md  index.html  n8n-yargizeka-chatbot.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
yargizeka-app/src/: App.tsx  styles.css  vite-env.d.ts
yargizeka-app/src-tauri/: Cargo.toml  tauri.conf.json
yargizeka-app/src-tauri/src/: main.rs
yargizeka-app/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
yargizeka-app/src/lib/: n8nClient.ts  store.ts  supabaseClient.ts
yargizeka-app/src/pages/: Anasayfa.tsx  DavaAnalizi.tsx  DilekceYazma.tsx  EmailVerification.tsx  ForgotPassword.tsx  Giris.tsx  HukukAsistani.tsx  Login.tsx  Profil.tsx  Register.tsx  ResetPassword.tsx  YargitayArama.tsx
yargizeka-app/supabase/: cleanup.sql  complete-setup.sql  fresh-schema.sql  schema.sql  simple-schema.sql
