[package]
name = "yargizeka-app"
version = "0.1.0"
description = "YargıZeka - Hukuk Profesyonelleri için AI Destekli Platform"
authors = ["YargıZeka Takımı"]
license = ""
repository = ""
default-run = "yargizeka-app"
edition = "2021"
rust-version = "1.60"

# Rust binary'lerinin boyutunu optimize etmek için aşağıdaki komutlara bakın:
# https://github.com/johnthagen/min-sized-rust#remove-panic-string-formatting-with-panic_immediate_abort
# Bu komutları uygulayarak binary boyutunu azaltabilirsiniz.

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["api-all", "dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "shell-open"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]